2023-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/gen-tiff-images/genimages: Added a script to
	produce a large number of TIFF files (736 files!) using various
	sample depths and great many other permutations supportable by
	libtiff.  This is both a technology demo of GraphicsMagick (and
	libtiff) as well as a way to generate interesting test inputs for
	other software.  While much of this work existed previously, it is
	included with GraphicsMagick in response to Sebastian Rasmussen's
	post to the GM-help mailing list on March 24 regarding "A set of
	old TIFF sample files..?".

2023-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile-private.h: Added a new private implementation
	header file.

	* coders/png.c: EXIF header implementation details/refinements.

	* coders/webp.c: Add/remove the internally expected 6-byte JPEG
	APP1 "Exif\0\0" header to/from the pristine Exif blob. Addresses
	SourceForge #696 "WebP Exif handling bug.

2023-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c (ReadJXLImage): Fix JXL EXIF offset handling, and
	deal with any EOI marker. (From SourceForge patch #69 submitted by
	Milos Komarcevic).

	* coders/heif.c (ReadHEIFImage): Fix HEIF EXIF offset handling,
	and deal with any EOI marker.  Also fix HEIF XMP parsing. (From
	SourceForge patch #69 submitted by Milos Komarcevic).

2023-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/identity.c (ReadIdentityImage): Return a PseudoClass
	image if possible.

	* coders/miff.c (ReadMIFFImage): With depth == 32, the range of
	image->colors is 1 to 65536.

2023-03-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* magick/nt_base.h Improve compatibility witholder versions
        of MSVC.
        *VisualMagick/configure/configure.rc Disable checkbox 
        for MSVC6 format - it is not workable.

2023-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Clarify