@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230402"
-#define public MagickPackageReleaseDate "snapshot-20230402"
+#define public MagickPackageVersionAddendum ".020230408"
+#define public MagickPackageReleaseDate "snapshot-20230408"
